--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.23.1",
     "react-toastify": "^10.0.5",
+    "recharts": "^2.12.7",
     "sort-by": "^0.0.2"
   },
   "devDependencies": {
